--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -82,14 +82,13 @@ b { font-weight: 500; }
 #HomePage .speakers { padding-bottom: 50px; }
 #HomePage .speakers .link { text-align: right; padding-top: 20px; text-decoration: underline; }
 #HomePage .sessions .heading h3 { font-family: Georgia, serif; }
-#HomePage .sub-main .span6 { margin-bottom: 40px; border: 1px #d8d8d8 solid; min-height: 100px; padding: 10px 20px; height: 230px; }
-#HomePage .sub-main .span6.topics { background: #f3f3f3; }
-#HomePage .sub-main .span6.topics ul { margin: 0px; }
-#HomePage .sub-main .span6.topics ul li { vertical-align: top; display: inline-block; list-style-type: none; width: 49%; }
-#HomePage .sub-main .span6.featured .span8 { padding: 10px 0px; }
-#HomePage .sub-main .span6.featured img { padding: 10px 0px; }
-#HomePage .sub-main .span6.featured h3 { font-size: 28px; line-height: 28px; }
-#HomePage .sub-main .span6.featured h4 { font-weight: normal; font-size: 16px; }
+#HomePage .sub-main .span4 { margin-bottom: 40px; border: 1px #d8d8d8 solid; min-height: 100px; padding: 10px 20px; height: 320px; }
+#HomePage .sub-main .span4 .logo { text-align: center; }
+#HomePage .sub-main .span4.topics { background: #f3f3f3; }
+#HomePage .sub-main .span4.topics ul { margin: 0px; }
+#HomePage .sub-main .span4.topics ul li { vertical-align: top; display: inline-block; list-style-type: none; width: 100%; margin-left: 10px; }
+#HomePage .sub-main .span4.official img, #HomePage .sub-main .span4.featured img { text-align: center; margin-left: -10px; padding: 15px 0px; }
+#HomePage .sub-main .span4.official h4, #HomePage .sub-main .span4.featured h4 { font-weight: normal; font-size: 17px; }
 #HomePage .sub-main a { text-decoration: none; }
 
 /*SessionsHolder -------------------------------------------------- */
@@ -248,7 +247,8 @@ b { font-weight: 500; }
   #ses-wrap .session-tile .vidthumb { width: 49%; display: inline-block; vertical-align: top; }
   #ses-wrap .session-tile .text-wrap { height: 3; width: 40%; display: inline-block; }
   #ses-wrap .session-tile .nov { width: 90%; } }
-@media (max-width: 1200px) { #HomePage .sub-main .span6 { height: 270px; }
+@media (max-width: 1200px) { #HomePage .sub-main .span4 { height: 370px; }
+  #HomePage .sub-main .span4.featured h3 { padding-bottom: 28px; }
   #AboutPage #intro, #AboutPage #top-right { height: 320px; }
   #AboutPage #stat { padding-left: 0px !important; }
   #AboutPage #who { margin-bottom: 50px !important; }
@@ -341,7 +341,9 @@ b { font-weight: 500; }
   #AboutPage #main #left-col #who { min-height: 0px !important; }
   #AboutPage #main #left-col #panel { border-bottom: 1px solid #d8d8d8; }
   #AboutPage #main #right-col { width: 100%; }
-  #HomePage .sub-main .span6 { height: 310px; }
+  #HomePage .sub-main .span4 { height: 420px; }
+  #HomePage .sub-main .span4.topics span.extra { display: none; }
+  #HomePage .sub-main .span4.featured img { padding-bottom: 25px; }
   #HomePage .content .span1 { padding-top: 30px; }
   #HomePage .content .text { padding: 10px; }
   #SessionsHolder #filter-wrap #Topic ul li input { display: block; }
