--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -77,13 +77,14 @@ b { font-weight: 500; }
 #HomePage .speakers { padding-bottom: 50px; }
 #HomePage .speakers .link { text-align: right; padding-top: 20px; text-decoration: underline; }
 #HomePage .sessions .heading h3 { font-family: Georgia, serif; }
-#HomePage .sub-main .span4 { margin-bottom: 40px; border: 1px #d8d8d8 solid; min-height: 100px; padding: 10px 20px; height: 320px; }
-#HomePage .sub-main .span4 .logo { text-align: center; }
-#HomePage .sub-main .span4.topics { background: #f3f3f3; }
-#HomePage .sub-main .span4.topics ul { margin: 0px; }
-#HomePage .sub-main .span4.topics ul li { vertical-align: top; display: inline-block; list-style-type: none; width: 100%; margin-left: 10px; }
-#HomePage .sub-main .span4.official img, #HomePage .sub-main .span4.featured img { text-align: center; margin-left: -10px; padding: 15px 0px; }
-#HomePage .sub-main .span4.official h4, #HomePage .sub-main .span4.featured h4 { font-weight: normal; font-size: 17px; }
+#HomePage .sub-main .box { margin-bottom: 40px; border: 1px #d8d8d8 solid; min-height: 100px; padding: 10px 20px; height: 320px; }
+#HomePage .sub-main .box .logo { text-align: center; }
+#HomePage .sub-main .box.topics { background: #f3f3f3; }
+#HomePage .sub-main .box.topics ul { margin: 0px; }
+#HomePage .sub-main .box.topics ul li { vertical-align: top; display: inline-block; list-style-type: none; width: 100%; margin-left: 10px; }
+#HomePage .sub-main .box.official.span6 h3, #HomePage .sub-main .box.featured.span6 h3 { text-align: center; }
+#HomePage .sub-main .box.official img, #HomePage .sub-main .box.featured img { text-align: center; margin-left: -10px; padding: 15px 0px; }
+#HomePage .sub-main .box.official h4, #HomePage .sub-main .box.featured h4 { font-weight: normal; font-size: 17px; }
 #HomePage .sub-main a { text-decoration: none; }
 
 /*SessionsHolder -------------------------------------------------- */
@@ -254,6 +255,8 @@ b { font-weight: 500; }
 @media (min-width: 768px) and (max-width: 979px) { #HomePage .sub-main .span4 { height: 420px; }
   #HomePage .sub-main .span4.topics span.extra { display: none; }
   #HomePage .sub-main .span4.featured img { padding-bottom: 25px; }
+  #HomePage .sub-main .span6 { height: 320px; }
+  #HomePage .sub-main .span6.topics span.extra { display: none; }
   #HomePage .content .span1 { padding-top: 30px; }
   #HomePage .content .text { padding: 10px; }
   #AboutPage #top-section #intro, #AboutPage #top-section #top-right { height: 400px; }
