--- a/themes/igf/scss/_variables.scss
+++ b/themes/igf/scss/_variables.scss
@@ -16,6 +16,7 @@ $grayDark:				 #535353;
 $grayAlt:               #323232;
 $gray:                  #696B6F;
 $grayFade:				#919294;
+$grayWash: 				#b9b9b9;
 $grayMedium:			#D8D8D8;
 $grayLight:             #E0E0E0; 
 $grayLighter:           #F3F3F3;
